# Circles-Open-CV

./: CMakeLists.txt  Readme.txt  drawCircle.cpp  drawCircle.hpp  generateCircle.cpp
